# fadfs-libcore

./: .gitignore  CMakeLists.txt
include/internal/: blocks.h  constant.h  fadisk.h  file.h  inode.h  state.h  superblock.h  typedef.h
include/public/: api.h  error.h
src/: api.c  blocks.c  blocs.c  fadisk.c  file.c  inode.c  state.c  superblock.c
